--- a/project-to-do-list/index.html
+++ b/project-to-do-list/index.html
@@ -25,6 +25,8 @@
       </section>
       <section class="buttons">
         <button id="apaga-tudo">Limpar Lista</button>
+        <button id="salvar-tarefas">Salvar</button>
+        <button id="remover-selecionado">Remove item selecionado</button>
       </section>
     </main>
     <script src="script.js"></script>
